Added light-mode to App component

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,5 +2,6 @@ $mainColor: #f92;
 $backgroundColor: #333;
 $textColor: #ddd;
 $alterColor: #555;
-$lightBackColor: #ddd;
-$lightTextColor: #555;
+$lightBackgroundColor: #fff;
+$lightAlterColor: #ddd;
+$lightTextColor: #333;
