Added light mode for every component

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,6 @@ $mainColor: #f92;
 $backgroundColor: #333;
 $textColor: #ddd;
 $alterColor: #555;
-$lightBackgroundColor: #fff;
-$lightAlterColor: #ddd;
+$lightBackgroundColor: #ddd;
+$lightAlterColor: #fff;
 $lightTextColor: #333;
